Products now are private (wrt piggybank)
